--- a/Html-Css/Bt/Buoi2/btvn.html
+++ b/Html-Css/Bt/Buoi2/btvn.html
@@ -11,11 +11,14 @@
             width: auto;
             background-color:darkgray;
             box-sizing: border-box;
+            font-size: 20px;
         }
+
         .TieuDe{
             margin-top: -20px;
             background-color:white;
         }
+
         .Than{
             margin-top: -10px;
             background-color: white;
@@ -23,6 +26,9 @@
             padding: 25px;
         }
 
+        li{
+            padding-bottom: 9px;
+        }
     </style>
 </head>
 <body>
@@ -34,11 +40,11 @@
     <div class="Than">
         <p>
             "Em chán nghề Trader rồi chị ạ !" Forex, Coin, cổ phiếu, chứng khoán... Đầu tư ngắn hạn thì kiểu đánh bạc còn đầu tư dài hạn thì lời không mấy. Muốn kiếm tiền nhanh thì lại càng dễ mất tiền. Trader phụ thuộc vào biến động thị trường, đau tim lắm. Em muốn đi tìm một nghề bền vững, lâu dài và có ích hơn. Trước em tốt nghiệp Học viện Ngân hàng, chuyên ngành Kế toán. Làm kế toán hơn 2 năm, ổn định thật nhưng tính chất công việc lặp đi lặp lại cũng chán. Em bắt đầu nghĩ đến công việc cần tư duy nhiều hơn, nhiều thách thức hơn càng tốt. Về trading em cũng xác định chỉ học cho biết trong thời gian suy nghĩ chuyển việc.
-            <br/>
+            <br/><br/>
             Thích làm việc với máy tính. Tỉ mỉ, cẩn thận. Không ngại học điều mới. 3 ưu điểm đó, em nghĩ mình phù hợp làm lập trình viên. Em đọc nhiều bài viết về xu hướng nghề nghiệp sẽ phát triển trong 10 năm tới, học lập trình cho người mới, nên học ngôn ngữ nào, front end hay back end, nhu cầu tuyển dụng IT,... lang thang hết các website, group facebook về IT, các trung tâm dạy lập trình tại Hà Nội ... Cuối cùng em có mặt tại lớp học của Techmaster :)
-            <br/>
+            <br/><br/>
             Trên đây chỉ là một trong số rất nhiều những cuộc nói chuyện ngắn - mình dùng từ "nói chuyện" bởi vì mình không phải tư vấn gì cả, chỉ chủ yếu ngồi nghe và hỏi chuyện vui vẻ như những người bạn mới gặp nhau lần đầu. Các bạn học viên đã tự mình tìm hiểu rất kĩ càng, có sự quyết tâm cao khi tới đăng kí học
-            <br/>
+            <br/><br/>
             Techmaster sáng 22/4/2021 đã tổ chức khai giảng thành công lớp Lộ trình Java Spring Boot Full Stack
             <ul>
                 <li>Lịch học: Sáng thứ 3, thứ 5 và thứ 7 hàng tuần</li>
@@ -78,11 +84,11 @@
         </ul>
         <p style="text-align:center"><img alt="" height="602" src="https://techmaster.vn/media/static/brbgh4451coepbqoch60/c079abc51co3o9rj1f2g" width="500" style="margin: auto;"></p>
         <p>Spring framework là một java framework mã nguồn mở (open source) mạnh mẽ, cung cấp một mô hình lập trình và cấu hình toàn diện cho các ứng dụng doanh nghiệp dựa trên Java.
-
+            <br/><br/>
             Spring Boot là 1 dự án trong hệ sinh thái Spring framework, giúp các lập trình viên đơn giản hóa việc tạo 1 ứng dụng với Spring, chỉ việc tập trung vào phát triển business logic cho ứng dụng, còn lại sẽ tự động cấu hình, tích hợp.
-            
+            <br/><br/>
             Spring boot rất thích hợp để xây dựng kiến trúc microservice, là một xu thế để phát triển các hệ thống lớn, phân tán và có tính mở rộng cao
-            
+            <br/><br/>
             Cơ hội nghề nghiệp: Rất nhiều doanh nghiệp hiện tại có nhu cầu xây dựng các ứng dụng doanh nghiệp dựa trên java/spring và hệ thống microservice, hoặc tối ưu lại các hệ thống cũ theo kiến trúc microservice và nền tảng cloud, vì vậy mà cơ hội việc làm rất lớn.</p>
     </div>
 </body>
