Lộ trình JavaWeb

--- a/Html-Css/Bt/Buoi2/btvn.html
+++ b/Html-Css/Bt/Buoi2/btvn.html
@@ -50,7 +50,7 @@
                 <li>Lịch học: Sáng thứ 3, thứ 5 và thứ 7 hàng tuần</li>
                 <li>Thời gian: 9:00 - 12:00</li>
                 <li>Địa điểm: Tầng 12A Viwaseen Tower - 48 Tố Hữu - Hà Nội</li>
-                <li>Link khoá học : <a target="blank" href="https://java.techmaster.vn/">https://java.techmaster.vn/</a></li>
+                <li>Link khoá học : <a href="https://java.techmaster.vn/" target="blank">https://java.techmaster.vn/</a></li>
                 <li>Lớp hiện vẫn tiếp tục tuyển sinh thêm. Các bạn quan tâm khoá học vui lòng liên hệ  Ms Huong - 0382416368 (zalo) nhé.</li>
             </ul>
         </p>
