--- a/Html-Css/Bt/Buoi3/index.html
+++ b/Html-Css/Bt/Buoi3/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bài tập về nhà</title>
+    <title>Bài tập về nhà Flex</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="BaiDau" >
-        <div id="MauDo" ></div>
+    <div class="BaiDau">
+        <div id="MauDo" class="CanGiua">Height 400px</div>
         <div id="XanhDo">
-            <div id="Xanhla"></div>
-            <div id="XanhDuong"></div>
+            <div id="Xanhla" class="CanGiua">Height 200px</div>
+            <div id="XanhDuong" class="CanGiua">Height 200px</div>
         </div>
     </div>
     <p> Hình 1 </p>
 
-    <div class="BaiHai" >
+    <div class="BaiHai">
         <div id="MauDo" class="Do2"></div>
         <div id="XanhDo">
             <div id="Xanhla"></div>
@@ -42,4 +42,5 @@
     </div>
     <p> Hình 4 </p>
 </body>
+
 </html>
