--- a/Html-Css/Bt/Buoi6/Bai3/index.html
+++ b/Html-Css/Bt/Buoi6/Bai3/index.html
@@ -127,6 +127,14 @@
         #DoanhNghiep>a:hover{
             text-decoration: underline;
         }
+
+        #username:focus{
+            outline: none;
+            border-color: #1877f2;
+            box-shadow: 0 0 0 2px #e7f3ff;
+            /* chuot */
+            caret-color: #1877f2;
+        }
     </style>
 </head>
 <body>
