--- a/Html-Css/Bt/Buoi6/Bai2/FileChiTiet/OPPOReno5.html
+++ b/Html-Css/Bt/Buoi6/Bai2/FileChiTiet/OPPOReno5.html
@@ -70,7 +70,7 @@
 
 <body>
     <div id="header">
-        <a href="../index.html"><i class="fas fa-backward"></i></a>
+        <a href="../index.html"><i class="fas fa-home"></i></a>
         <h1>Điện thoại OPPO Reno5</h1>
     </div>
     <div id="container">
