Lộ trình JavaWeb

--- a/Html-Css/Bt/DoAn/index.html
+++ b/Html-Css/Bt/DoAn/index.html
@@ -909,7 +909,7 @@
                         <li> 
                             <h4>Code: </h4>
                             &emsp;
-                            <a title="GitHub" target="_blank" href="https://github.com/minhan1410/minhan1410.github.io"><i class="fab fa-github Icon"></i></a>
+                            <a title="GitHub" target="_blank" href="https://github.com/minhan1410"><i class="fab fa-github Icon"></i></a>
                             &emsp;
                             <a target="_blank" href="https://replit.com/@NguynAn4"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Repl.it_logo.svg/768px-Repl.it_logo.svg.png" alt="Repl.it" title="Repl.it"></a>
                         </li>
